--- a/.github/workflows/17. synk basic workflow.yml
+++ b/.github/workflows/17. synk basic workflow.yml
@@ -10,3 +10,5 @@ jobs:
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --config-dir=projects-with-vulnerabilities\java-reachability-playground-master
