--- a/.github/workflows/17. synk basic workflow.yml
+++ b/.github/workflows/17. synk basic workflow.yml
@@ -7,8 +7,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/maven@master
-        continue-on-error: true
+        # continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --config-dir=/projects-with-vulnerabilities/java-reachability-playground-master
+          args: --all-projects
