added file path

--- a/.github/workflows/17. synk basic workflow.yml
+++ b/.github/workflows/17. synk basic workflow.yml
@@ -11,4 +11,4 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --maven-aggregate-project
+          args: --file=projects-with-vulnerabilities/java-reachability-playground-master/pom.xml
